# Walmart-Assesment-Fashion-AI

./: .gitignore  README.md  SUBMISSION_ONE_PAGER.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  worker_settings.py  worker_tasks.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py
backend/app/db/: engine.py  init_db.py
backend/app/repositories/: library_repository.py
backend/app/schemas/: library.py
backend/app/services/: classification_attributes.py  classification_runner.py  classifier_service.py  library_service.py  model_output_parser.py
backend/app/services/classifiers/: base.py  heuristic.py  openai_vision.py
backend/app/storage/: base.py  factory.py  local_storage.py  s3_storage.py
backend/tests/: conftest.py  test_api_e2e.py  test_library_filters.py  test_library_service.py  test_model_output_parser.py
eval/: labeled_test_set.json  run_evaluation.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: collapsible-filter-panel.tsx  gallery.tsx  site-footer.tsx  site-header.tsx  upload-form.tsx
frontend/src/lib/: api.ts
frontend/src/types/: domain.ts
